--- a/index.html
+++ b/index.html
@@ -22,16 +22,17 @@
 
 
         <ul>
-          <li><a href="https://github.com/Digitopia/DigiAmbient/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Digitopia/DigiAmbient/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/Digitopia/DigiAmbient">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/Digitopia/DigiAmbient/releases/download/v1/DigiAmbient_Mac.zip">Download <strong>OSX</strong></a></li>
+          <li>
+          <li><a href="https://github.com/Digitopia/DigiAmbient/releases/download/v1_WIN/DigiAmbient_WIN.zip">Download <strong>WIN</strong></a></li>
+          <li>
         </ul>
       </header>
       <section>
         <h3>
 <a id="digiambient" class="anchor" href="#digiambient" aria-hidden="true"><span class="octicon octicon-link"></span></a>DigiAmbient</h3>
 
-<p>DigiAmbient is a simple and intuitive virtual instrument that can, nonetheless, generate interesting sonic ambiences and visualizations. It is a modified version of a patch made by Filipe Lopes.  </p>
+<p>DigiAmbient is a simple and intuitive virtual instrument that can, nonetheless, generate interesting sonic ambiences and visualizations. It is a modified version of a patch made by <a target="_blank" href="http://www.filipelopes.net/">Filipe Lopes</a>.  </p>
 
 <p>Digisimpler is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -42,19 +43,32 @@
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h3>
 
 <ul>
-<li>Works on OSX and Windows</li>
+<li> Works on OSX and Windows;</li>
+<li> Preset storage and recall; </li>
+<li> Can be used with the computer mouse and keyboard or with any MIDI controller;</li>
+<li> Parameter mapping. </li>
 </ul>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p> This application was developed by <a href="http://tiagoangelo.tk" target="_blank"> Tiago Ângelo</a> (aka <a href="https://github.com/p1nh0" class="user-mention" target="_blank">@p1nh0</a>) and <a href="https://www.facebook.com/DigitopiaCasaDaMusica?fref=ts" target="_blank">Digitópia Collective</a> (<a href="https://github.com/Digitopia" class="user-mention" target="_blank">@Digitópia</a>) — <a href="http://www.casadamusica.com/" target="_blank">Casa da Música</a>.
+
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p> If you're experiencing any problem with the software please check the manual first.
+    For any other questions you can contact <a href="mailto:p1nh0.c0d1ng@gmail.com" target="_blank">Sonorium support</a> or <a href="mailto:digitopia@casadamusica.com"> Digitópia — Casa da Música</a>.
+</p>
+<p>
+    Thanks for your preference!
+</p>
+<p>
+<img src="media/Digitopia_logo.png" align="middle"></img>
       </section>
+      
+
       <footer>
         <p>This project is maintained by <a href="https://github.com/Digitopia">Digitopia</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
