--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
         <p class="view"><a href="https://github.com/Digitopia/DigiAmbient">View the Project on GitHub <small>Digitopia/DigiAmbient</small></a></p>
 
+        <ul>
+          <li><a href="https://github.com/Digitopia/DigiAmbient/releases/download/v1/DigiAmbient_Mac.zip">Download <strong>OSX</strong></a></li>
+          <li><a href="https://github.com/Digitopia/DigiAmbient/releases/download/v1_WIN/DigiAmbient_WIN.zip">Download <strong>WIN</strong></a></li>
+          <li><a href="https://github.com/Digitopia/DigiSimpler">Download <strong>Source</strong></a></li>
+        </ul>
 
         <ul>
           <li><a href="https://github.com/Digitopia/DigiAmbient/releases/download/v1/DigiAmbient_Mac.zip">Download <strong>OSX</strong></a></li>
