--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
 <p> If you're experiencing any problem with the software please check the manual first.
     For any other questions you can contact <a href="mailto:p1nh0.c0d1ng@gmail.com" target="_blank">Sonorium support</a> or <a href="mailto:digitopia@casadamusica.com"> Digitópia — Casa da Música</a>.
 </p>
+<br>
+<p>
+  Extra credits:
+  <ul>
+  <li> resonators~ by Freed, Wright and Zbyszynski at CNMAT</li>
+  <li> rev4~ by Zack Settel at IRCAM</li>
+  </ul>
+</p>
+<br>
 <p>
     Thanks for your preference!
 </p>
