added app image

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
 <p>DigiAmbient is a simple and intuitive virtual instrument that can, nonetheless, generate interesting sonic ambiences and visualizations. It is a modified version of a patch made by <a target="_blank" href="http://www.filipelopes.net/">Filipe Lopes</a>.  </p>
 
+<img src="media/DigiAmbient.jpg" align="middle">
+
 <p>Digisimpler is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
