--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
         </ul>
       </header>
       <section>
-        <h3>
+
+
+
+<h3>
 <a id="digiambient" class="anchor" href="#digiambient" aria-hidden="true"><span class="octicon octicon-link"></span></a>DigiAmbient</h3>
 
 <p>DigiAmbient is a simple and intuitive virtual instrument that can, nonetheless, generate interesting sonic ambiences and visualizations. It is a modified version of a patch made by <a target="_blank" href="http://www.filipelopes.net/">Filipe Lopes</a>.  </p>
@@ -78,6 +81,9 @@
       
 
       <footer>
+
+      <img src="media/DigiAmbient_icon.png" align="middle">
+      
         <p>This project is maintained by <a href="https://github.com/Digitopia">Digitopia</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
