--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Digiambient</h1>
+        <img src="media/DigiAmbient_icon.png" align="middle">
         <p>Digitopia&#39;s software</p>
 
         <p class="view"><a href="https://github.com/Digitopia/DigiAmbient">View the Project on GitHub <small>Digitopia/DigiAmbient</small></a></p>
